Фотографии в галерее сайта (карусель) не растягиваются.

--- a/app/views/site_photo/show_with_others.html.erb
+++ b/app/views/site_photo/show_with_others.html.erb
@@ -1,15 +1,10 @@
-
-
-
-
-
-<div class="fotorama" data-shuffle="false" data-nav="thumbs" data-width="100%">
+<div class="fotorama" data-shuffle="false" data-nav="thumbs" data-width="100%" >
 			
-		 <a href="<%= @site_photo.image_url(:normal) %>"></a>
+		 <a href="<%= @site_photo.image_url(:normal) %>" data-fit="scaledown"></a>
      <% @others.each do |photo| %>
 	   	
 	   	<% unless photo.id == @site_photo.id  %>  
-	     <a href="<%= photo.image_url(:normal) %>"></a>
+	     <a href="<%= photo.image_url(:normal) %>" data-fit="scaledown"></a>
      	<% end %>
      
      <% end %> 
@@ -19,3 +14,4 @@
 <button type="button" class="btn btn-default btn-lg">
 	<%= link_to comment_icon, gallery_show_path(@site_photo.photo), class: 'comlink' %>
 </button>
+
