--- a/app/views/layouts/_photo_menu.html.erb
+++ b/app/views/layouts/_photo_menu.html.erb
@@ -3,8 +3,9 @@
  
   <ul class="dropdown-menu">
     
-    <li><%= link_to 'Галерея', gallery_index_path %></li>
-    <li><%= link_to 'Альбомы', albums_path %></li>
+    <li><%= link_to 'Галерея', albums_path %></li>
+    <li><%= link_to 'Последние фотографии', gallery_index_path %></li>
+    
     
 
   </ul>
