--- a/app/views/comment/_comments_under_user.html.erb
+++ b/app/views/comment/_comments_under_user.html.erb
@@ -1,7 +1,5 @@
 <h4><%= t("comments") %></h4>
 
-<!-- TODO: Унифицировать отображение комментариев к объектам -->
-
 <% resource.comments.each do |c| %>
 
 <div>
@@ -9,8 +7,7 @@
   <div><%= c.comment %></div>
 </div>
 
-
-<%= link_to del_icon, [resource,c], method: :delete, data: { confirm: 'Are you sure?' } if can? :destroy, c %>
+<%= link_to del_icon, [current_user,resource,c], method: :delete, data: { confirm: 'Are you sure?' } if can? :destroy, c %>
 
 <div style="clear: left; height: 20px;" ></div>
 
