--- a/app/views/gallery/index.html.erb
+++ b/app/views/gallery/index.html.erb
@@ -11,7 +11,7 @@
   
     <div class="col-lg-3 col-md-4 col-xs-6 thumb">
       <%= render partial: "photos/thumb", locals: { photo: photo, path: gallery_show_path(photo) } %>
-      <%- l1 = link_to plus_icon, admin_choose_site_photo_path(photo.id) if is_stuff? %>
+      <%- l1 = link_to plus_icon, choose_site_photo_path(photo.id) if is_stuff? %>
       
       <%= render partial: "photos/caption", locals: { photo: photo, links: [l1] } %>
     </div>
