--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -16,6 +16,6 @@
 
 <br>
 
-<%= render partial: "simple_comment/comments", locals: {resource: article } %>
-<%= render partial: "simple_comment/form", locals: { user: nil, resource: article} %>
+<%= render partial: "comment/comments", locals: {resource: article } %>
+<%= render partial: "comment/form2", locals: { user: nil, resource: article} %>
 
