Письма сортируются по дате изменения (которая меняется при комментировании письма)

--- a/app/views/admin/competition_requests/index.html.erb
+++ b/app/views/admin/competition_requests/index.html.erb
@@ -13,7 +13,7 @@
   <tbody>
     <% @competition_requests.each do |request| %>
       <tr>
-        <td><%= request.user_name %></td>
+        <td><%= link_to request.user_name, user_profile_path(request.user.id) %></td>
         <td> <%= request.decision %></td>
         <td> <%= link_to(t("competition_requests.index.requests"), edit_admin_request_path(request),  class: "btn btn-primary")  %></td>
         
