--- a/app/views/letters/show.html.erb
+++ b/app/views/letters/show.html.erb
@@ -21,7 +21,7 @@
 
 <hr>
 
-<%= render partial: "comment/comments", locals: {resource: @letter} %>
+<%= render partial: "comment/comments_under_user", locals: {resource: @letter} %>
 <%= render partial: "comment/form", locals: { user: @user, resource: @letter} %>
 
 <br><br>
