--- a/app/views/layouts/_photo_menu.html.erb
+++ b/app/views/layouts/_photo_menu.html.erb
@@ -6,7 +6,7 @@
     <li><%= link_to 'Галерея', albums_path %></li>
     <li><%= link_to 'Последние фотографии', gallery_index_path %></li>
     
-    
+    <li><%= link_to 'Авторы', author_index_path %> </li>
 
   </ul>
 </li>
