Загрузка фотографий сайта

--- a/app/views/admin/albums/show.html.erb
+++ b/app/views/admin/albums/show.html.erb
@@ -1,5 +1,10 @@
 <h1><%= @album.title %></h1>
-<br>
+
+<%= link_to t('new'), new_admin_album_site_photo_path(@album),{class: "btn btn-primary"}  %>
+
+<br><br>
+
+
 
 <div class="row">
 
