--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -18,7 +18,7 @@
     </div>
 
     <div class="form-group">
-    <%= f.association :age_policy, :input_html => {class: "form-control"}%>
+    <%= f.association :age_policy, collection: Admin::AgePolicy.order('age'),:input_html => {class: "form-control"}%>
     </div>
 
     <div class="form-group">
