--- a/app/views/author/index.html.erb
+++ b/app/views/author/index.html.erb
@@ -1,12 +1,12 @@
-<ul>
+<ul class="list-unstyled">
 
 <% @users.each do |user| %>
 
-<p>
-	
+<li>
+	<%= image_tag(user.avatar_url(:thumb),class: "img-rounded") %>
 	<%= link_to user.full_name,user_profile_path(user) %>
-
-</p>
+  
+</li>
 
 <% end  %>
 
