Правки форм, названий

--- a/app/views/admin/banner_placements/_form.html.erb
+++ b/app/views/admin/banner_placements/_form.html.erb
@@ -21,6 +21,6 @@
     </div>
 
 
-    <%= f.button :submit,input_html: {class: "btn btn-default"} %>
+    <%= f.button :submit, value: t('save'), input_html: {class: "btn btn-default"} %>
   
 <% end %>
