--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -18,6 +18,6 @@
 
     <%= f.hidden_field :type %>
 
-    <%= f.button :submit,input_html: {class: "btn btn-primary"} %>
+    <%= f.button :submit, value: t('save'),input_html: {class: "btn btn-primary"} %>
   
 <% end %>
