--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,16 +39,8 @@
   
  
 
+      <%= render partial: 'layouts/copyright' %> 
   
-  <footer class="row">
-    <nav class="col col-lg-12">
-      <%= render 'banners/bottom' %>  
-      <ul class="breadcrumb">
-        <li><a href="">All rights reserved</a></li>
-        
-      </ul><!-- breadcrumb -->
-    </nav><!-- nav -->
-  </footer><!-- footer -->
 
 </section><!-- container -->
 
