--- a/app/views/layouts/user_profile_layout.html.erb
+++ b/app/views/layouts/user_profile_layout.html.erb
@@ -44,20 +44,10 @@
  
 
   
-  <footer class="row">
-  <section class="col col-lg-12">
-    <%= render 'banners/bottom' %>  
-  </section>
+  
+      <%= render partial: 'layouts/copyright' %>   
+ 
 
-    <nav class="col col-lg-12">
-      
-      <ul class="breadcrumb">
-        <li><a href="">About the Roux Academy</a></li>
-        <li><a href="">Privacy Policy</a></li>
-        <li><a href="">Roux Academy Website</a></li>
-      </ul><!-- breadcrumb -->
-    </nav><!-- nav -->
-  </footer><!-- footer -->
 
 </section><!-- container -->
 
