--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -27,7 +27,7 @@
 
   
   
-    <%= f.button :submit,class: "btn btn-default" %>
+    <%= f.button :submit,value: t(:save), class: "btn btn-default" %>
   
 <% end %>
 
