--- a/lib/templates/erb/scaffold/_form.html.erb
+++ b/lib/templates/erb/scaffold/_form.html.erb
@@ -9,6 +9,6 @@
   <%- end -%>
 
 
-    <%%= f.button :submit,input_html: {class: "btn btn-default"} %>
+    <%%= f.button :submit, value: t('save'),input_html: {class: "btn btn-default"} %>
   
 <%% end %>
