--- a/app/views/admin/banners/_form.html.erb
+++ b/app/views/admin/banners/_form.html.erb
@@ -14,6 +14,6 @@
     <%= f.file_field :image, :input_html => {class: "form-control"} %>
     </div>
 
-    <%= f.button :submit,input_html: {class: "btn btn-default"} %>
+    <%= f.button :submit, value: t('save'),input_html: {class: "btn btn-default"} %>
   
 <% end %>
