--- a/app/views/admin/messages/_form.html.erb
+++ b/app/views/admin/messages/_form.html.erb
@@ -7,6 +7,6 @@
   </div>
 
 
-    <%= f.button :submit,class: "btn btn-default" %>
+    <%= f.button :submit, value: t('save'),class: "btn btn-default" %>
 
 <% end %>
