--- a/app/views/admin/messages/show.html.erb
+++ b/app/views/admin/messages/show.html.erb
@@ -54,7 +54,7 @@
 
  
   
-    <%= f.button :submit,class: "btn btn-default" %>
+    <%= f.button :submit, value: t('save'),class: "btn btn-default" %>
   
 <% end %>
 
