--- a/app/views/admin/settings/_form.html.erb
+++ b/app/views/admin/settings/_form.html.erb
@@ -23,7 +23,7 @@
                 
 
 
-    <%= f.button :submit,input_html: {class: "btn btn-default"} %>
+    <%= f.button :submit, value: t('save'),input_html: {class: "btn btn-default"} %>
   
 <% end %>
 
