--- a/app/views/admin/site_photo/_form.html.erb
+++ b/app/views/admin/site_photo/_form.html.erb
@@ -22,7 +22,7 @@
     </div>
     
   
-    <%= f.button :submit,class: "btn btn-default" %>
+    <%= f.button :submit, value: t('save'),class: "btn btn-default" %>
   
 <% end %>
 
