--- a/app/views/comment/_form2.html.erb
+++ b/app/views/comment/_form2.html.erb
@@ -9,6 +9,6 @@
     <%= f.input :commentable, :as => :hidden, :input_html => { :value => resource.class.to_s.underscore }  %>
     </div>
 
-    <%= f.button :submit,class: "btn btn-default" %>
+    <%= f.button :submit, value: t('save'),class: "btn btn-default" %>
 <% end %>
 
