--- a/app/views/letters/_form.html.erb
+++ b/app/views/letters/_form.html.erb
@@ -17,6 +17,6 @@
     </div>
     
     
-    <%= f.button :submit,input_html: {class: "btn btn-default"} %>
+    <%= f.button :submit, value: t('save'),input_html: {class: "btn btn-default"} %>
   
 <% end %>
