--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -12,7 +12,7 @@
   </div>
 
   
-   <%= f.button :submit,class: "btn btn-default" %>
+   <%= f.button :submit, value: t('save'), class: "btn btn-default" %>
   
 <% end %>
 
