--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -46,7 +46,7 @@
 
  
   <div class="form-actions">
-    <%= f.button :submit,class: "btn btn-default" %>
+    <%= f.button :submit, value: t('save'),class: "btn btn-default" %>
   </div>
 
 <% end %>
