--- a/app/views/layouts/moder_photo_layout.html.erb
+++ b/app/views/layouts/moder_photo_layout.html.erb
@@ -4,9 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
- 
-    <title><%= content_for?(:title) ? yield(:title) : "Photohome" %></title>
+  
+    <title><%= content_for?(:title) ? yield(:title) :  "Тюменский дом фотографии" %></title>
     <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Photohome" %>">
+    <link href='http://fonts.googleapis.com/css?family=Playfair+Display|PT+Sans+Narrow:400,700' rel='stylesheet' type='text/css'>
     <%= stylesheet_link_tag "application", :media => "all" %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
@@ -15,46 +16,44 @@
 
   </head>
 
-  <body style="margin-top: 70px">
+  <body class="back">
+     
+        
+    
 
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-            <%=  link_to(I18n.t("project_name"),root_path,class: "navbar-brand") %>
-        </div>
-         <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-           
-            <%= render 'layouts/common_menu' %>
-            <%= render 'layouts/admin_menu' if current_user && current_user.admin? %>
-            <%= render 'layouts/navigation' %>
-            <%= render 'layouts/lang_select' %>
-          
-          </ul>
-          
-        </div><!--/.navbar-collapse -->
-      </div>
-    </div>
-
-    <div class="container">
+      <section class="container" style = "background: #ffffff">
       
-      <%=render 'layouts/messages'%>
-      <div class="col-md-2"><%= render 'layouts/moder_photo_sidebar' %></div>
-      <div class="col-md-10"><%= yield%> </div>
+      <div class="content row" >
+        
+        <section class="main col col-lg-12" style = "margin-bottom: 20px">
+          <%= render 'layouts/header' %>
+          <%= render 'banners/top' %>       
+        </section>   
+         
+         <div class="col-md-2" style="border: dotted 1px silver"><%= render 'layouts/moder_photo_sidebar' %></div>    
+         
+         <section class="main col col-lg-10">
+          <%= breadcrumbs :separator => " &rsaquo; " %>
+          <%= render 'layouts/messages' %>
+          <%= yield %>
+        </section><!-- main -->
+       
+      </div><!-- content -->
+    
+  
+ 
 
-      <div class="push"><!--//--></div>
-    </div><!-- /.container -->
+  
+  
+      <%= render partial: 'layouts/copyright' %>   
+ 
 
-  <div id="footer">
-      <div class="container">
-        <p class="muted credit">Copiright 2013 </p>
-      </div>
-  </div>
+
+</section><!-- container -->
+
+  
+    
+  
   
   </body>
 </html>
