--- a/app/assets/stylesheets/jRating.jquery.css
+++ b/app/assets/stylesheets/jRating.jquery.css
@@ -31,7 +31,7 @@
 p.jRatingInfos {
 	position:		absolute;
 	z-index:9999;
-	background:	transparent url('assets/bg_jRatingInfos.png') no-repeat;
+	background:	transparent 'assets/bg_jRatingInfos.png' no-repeat;
 	color:			red;
 	display:		none;
 	width:			91px;
