--- a/app/views/home/test.html.erb
+++ b/app/views/home/test.html.erb
@@ -1,10 +1,5 @@
+<h1>Hello</h1>
+<!-- <input id="input-id" type="number" class="rating" min=1 max=10 step=0.5 data-size="lg"> -->
 
+<input id="input-id" value="2" type="number" class="rating" min=1 max=10 step=0.5 data-size="md">
 
- <div class="fotorama" data-autoplay="true" style="position:relative;margin-right:20%;margin-left:20%;" data-fit="cover" data-width="100%"
-     data-ratio="1200/900">
-     
-
-     
-    <%= image_tag  Photo.last.image_url(:normal) %>      
-     
-  </div>
