--- a/app/views/site_photos/show_with_others.html.erb
+++ b/app/views/site_photos/show_with_others.html.erb
@@ -10,8 +10,11 @@
      <% end %> 
 
 </div>
+
 <!-- !!! Нужно предусмотреть переход если фото загружено само по себе без пользователя -->
+
 <button type="button" class="btn btn-default btn-lg">
-	<%= link_to comment_icon, gallery_show_path(@site_photo.photo), class: 'comlink' %>
+
+	<%= link_to comment_icon, gallery_show_path(@site_photo), class: 'comlink' %>
 </button>
 
