--- a/app/views/layouts/_copyright.html.erb
+++ b/app/views/layouts/_copyright.html.erb
@@ -3,7 +3,7 @@
     <nav class="col col-lg-12">
       <%= render 'banners/bottom' %>  
       <ul class="breadcrumb">
-        <li><a href="">All rights reserved</a></li>
+        <li><%= Admin::Setting.footer %></li>
         
       </ul><!-- breadcrumb -->
     </nav><!-- nav -->
