Bug with host name

--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -6,7 +6,7 @@
 </p>
 Подтверждение необходимо для исключения не санкционированного использования Вашего электронного адреса.
 Если Вы не регистрировались на сайте Тюменского Дома фотографии, то просто игнорируйте это письмо.
-Пожалуйста, не отвечайте на эот письмо, оно отправляется автоматически, ответы же на этом адресе не обрабатываются.
+Пожалуйста, не отвечайте на это письмо, оно отправляется автоматически, ответы же на этом адресе не обрабатываются.
 С наилучшими пожеланиями, Администрация интернет проекта Тюменского Дома фотографии.
 </p>
 
