--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -55,7 +55,8 @@
   </div>
   
   <div class="form-group">
-  <%= f.file_field :avatar, :input_html => {class: "form-control"}  %>
+  <p> <%= t("avatar_picture") %>: </p>
+  <%= f.file_field :avatar , :input_html => {class: "form-control"}  %>
   </div>
   
    <div class="form-group">
