--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -55,7 +55,7 @@
           <div class="thumbnail">
 
                 
-            <img src ="<%= article_image(article) %>"  alt="..." style = "max-height: 150px" >
+            <img src ="<%= post_image(article) %>"  alt="..." style = "max-height: 150px" >
 
 
           </div>
