Photo.age_policy.age bug (liskov)

--- a/app/views/photos/_caption.html.erb
+++ b/app/views/photos/_caption.html.erb
@@ -1,5 +1,5 @@
 <div class="caption">
- <small> <%= age_badge(photo.age_policy.age) %> </small>
+ <small> <%= age_badge(photo.age_policy_age) %> </small>
   
   <span style = "float: right">  
     <% links.each do |l| %>
