Added user_name to site_photo

--- a/app/views/admin/site_photo/_form.html.erb
+++ b/app/views/admin/site_photo/_form.html.erb
@@ -8,6 +8,10 @@
     </div>
 
     <div class="form-group">
+    <%= f.input :user_name,:input_html => {class: "form-control"} %>
+    </div>
+
+    <div class="form-group">
     <%= f.association :policy,:input_html => {class: "form-control"} %>
     </div>
     
