--- a/app/views/site_photos/_form.html.erb
+++ b/app/views/site_photos/_form.html.erb
@@ -7,6 +7,11 @@
     <%= f.input :title,:input_html => {class: "form-control"} %>
     </div>
     
+    <div class="form-group">
+    <%= f.input :user_name,:input_html => {class: "form-control"} %>
+    </div>
+
+
     <%= f.hidden_field :image_cache %>
   
     <div class="form-group">
