--- a/app/views/admin/albums/index.html.erb
+++ b/app/views/admin/albums/index.html.erb
@@ -4,8 +4,7 @@
   <thead>
     <tr>
       <th><%= t('.name') %></th>
-    
-      <th></th>
+      <th><%= t('authors') %></th>
       <th></th>
       <th></th>
       <th></th>
@@ -16,6 +15,7 @@
     <% @albums.each do |album| %>
       <tr>
         <td><%= album.title %></td>
+        <td><%= album.authors %></td>
         <td><%= link_to content_tag(:span,"",class: "ui-icon ui-icon-folder-open"), admin_album_path(album) %></td>
         <td><%= link_to content_tag(:span,"",class: "ui-icon ui-icon-pencil"), edit_admin_album_path(album) %></td>
         <td><%= link_to content_tag(:span,"",class: "ui-icon ui-icon-minus"), admin_album_path(album), method: :delete, data: { confirm: 'Are you sure?' } %></td>
