--- a/app/views/admin/albums/_form.html.erb
+++ b/app/views/admin/albums/_form.html.erb
@@ -4,6 +4,11 @@
     <div class="form-group">
     <%= f.input :title,:input_html => {class: "form-control"} %>
     </div>
+
+    <div class="form-group">
+    <%= f.input :description,:input_html => {class: "form-control"} %>
+    </div>
+
     
     <%= f.button :submit,value: t(:save),:input_html => {class: "btn btn-default"} %>
   
