Описание галереи видно только внутри. Карусель перенесена из site_photo в albums.

--- a/app/views/albums/carousel.html.erb
+++ b/app/views/albums/carousel.html.erb
@@ -1,3 +1,8 @@
+<h1><%= @album.title %></h1>
+<br>
+
+<%= render partial: "description", locals: {description: @album.description} %>
+
 <div class="fotorama" data-shuffle="false" data-nav="thumbs" data-width="100%" >
 			
 		 <a href="<%= @site_photo.image_url(:normal) %>" data-fit="scaledown"></a>
