--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -4,16 +4,14 @@
 <p>
 <h3><%= link_to album.title, album_path(album) %></h3>
 
-<div class="well">
-  <%= album.description %>
-</div>
+
 <small><%= t('authors') %> : <%= album.authors %></small>
 </p>
 	<% album.last_photos.each_with_index do |photo,index| %>
 			  
    	  <div class="col-sm-3" >
     	<div class="thumbnail">  
-      	<%= render partial: "photos/thumb", locals: { photo: photo, path: site_photo_with_others_path(photo) } %>
+      <%= render partial: "photos/thumb", locals: { photo: photo, path: album_carousel_path(album.id,photo.id) } %>
        	<%- l1 = link_to del_icon, site_photo_path(photo.id), method: :delete, data: { confirm: 'Are you sure?' } if is_stuff? %>
       	<%= render partial: "photos/caption", locals: { photo: photo, links: [l1] } %>
     	</div>
