--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -1,24 +1,20 @@
 <h1><%= @album.title %></h1>
 <br>
 
+<%= render partial: "description", locals: {description: @album.description} %>
+
 <div class="row">
 
    <% @album.site_photos.each_with_index do |photo,index| %>
   
     <div class="col-sm-3" >
-  
-    <div class="thumbnail">  
-     
-      <%= render partial: "photos/thumb", locals: { photo: photo, path: site_photo_path(photo) } %>
-      <%= render partial: "photos/caption", locals: { photo: photo, links: [] } %>
-
-     
-    </div>
-    
-    
-    
-  </div>
+      <div class="thumbnail">  
+	      <%= render partial: "photos/thumb", locals: { photo: photo, path: site_photo_path(photo) } %>
+	      <%= render partial: "photos/caption", locals: { photo: photo, links: [] } %>
+	    </div>
+	  </div>
 
   <% end %>
   
 </div>
+
