Возможность указания реального пользователя для site_photo

--- a/app/views/admin/site_photo/_form.html.erb
+++ b/app/views/admin/site_photo/_form.html.erb
@@ -12,6 +12,11 @@
     </div>
 
     <div class="form-group">
+    <%= f.input :user_id,label: "Существующий пользователь", :input_html => {data: {load: ""   }} %>
+    </div>
+    
+
+    <div class="form-group">
     <%= f.association :policy,:input_html => {class: "form-control"} %>
     </div>
     
