--- a/app/views/admin/site_photo/_form.html.erb
+++ b/app/views/admin/site_photo/_form.html.erb
@@ -12,7 +12,7 @@
     </div>
 
     <div class="form-group">
-    <%= f.input :user_id,label: "Существующий пользователь", :input_html => {data: {load: ""   }} %>
+    <%= f.input :user_id,label: "... или существующий пользователь", :input_html => {data: {load: ""   }} %>
     </div>
     
 
