Описание галерей поддерживает форматирование

--- a/app/views/albums/_description.html.erb
+++ b/app/views/albums/_description.html.erb
@@ -1,6 +1,6 @@
 <% unless description.nil? || description.blank? %> 
 <div class="well">
-	<%= description %>
+	<%= raw description %>
 </div>
 <% end %>
  
