--- a/app/views/admin/albums/_form.html.erb
+++ b/app/views/admin/albums/_form.html.erb
@@ -6,10 +6,10 @@
     </div>
 
     <div class="form-group">
-    <%= f.input :description,:input_html => {class: "form-control"} %>
+    <%= f.input :description,:input_html => {class: "redactor form-control"} %>
     </div>
 
-    
+	   
     <%= f.button :submit,value: t(:save),:input_html => {class: "btn btn-default"} %>
   
 <% end %>
