Изменено отображание галерей в том числе и на главной странице

--- a/app/views/albums/_description.html.erb
+++ b/app/views/albums/_description.html.erb
@@ -1,6 +1,9 @@
-<% unless description.nil? || description.blank? %> 
 <div class="well">
-	<%= raw description %>
-</div>
+<% unless album.description.nil? || album.description.blank? %> 
+	<%= raw album.description %>
 <% end %>
+
+<small><%= t('authors') %> : <%= album.authors %></small>
+
+</div>
  
