--- a/app/views/albums/carousel.html.erb
+++ b/app/views/albums/carousel.html.erb
@@ -1,7 +1,7 @@
 <h1><%= @album.title %></h1>
 <br>
 
-<%= render partial: "description", locals: {description: @album.description} %>
+<%= render partial: "description", locals: {album: @album} %>
 
 <div class="fotorama" data-shuffle="false" data-nav="thumbs" data-width="100%" >
 			
