--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -1,7 +1,7 @@
 <h1><%= @album.title %></h1>
 <br>
 
-<%= render partial: "description", locals: {description: @album.description} %>
+<%= render partial: "description", locals: {album: @album} %>
 
 <div class="row">
 
