--- a/app/views/home/test.html.erb
+++ b/app/views/home/test.html.erb
@@ -1,5 +1,50 @@
 <h1>Hello</h1>
-<!-- <input id="input-id" type="number" class="rating" min=1 max=10 step=0.5 data-size="lg"> -->
 
-<input id="input-id" value="2" type="number" class="rating" min=1 max=10 step=0.5 data-size="md">
+<a href="#" id="username" data-type="text" data-resource="post" data-name="username" data-url="/posts/1" data-original-title="Enter username">superuser</a>
 
+<ul>
+<% @photos.each do |photo| %>
+	
+	<li>
+		
+		<%= link_to photo.title, ajax_test_path, method: :put, class: 'edit', remote: true,  data: {resourse: 'post', type: 'select', pk: photo.id, url: 'ajax/test',title: 'Enter'} %>
+	
+	</li>
+
+<% end %>
+
+<script>
+
+$(function(){
+    $('.edit').editable({
+        value: 2,    
+        source: <%= raw Admin::AgePolicy.all.map {|p| {value: p.id, text: p.age} }.to_s.gsub(":","").gsub("=>",":") %>
+    });
+});
+
+
+
+
+</script>
+
+<div class="modal fade" id="myModal">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <h4 class="modal-title">Modal title</h4>
+      </div>
+      <div class="modal-body">
+        <p>One fine body&hellip;</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
+<button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+  Launch demo modal
+</button>
