--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -17,6 +17,10 @@
   <div class="form-group">
   <%= f.input :last_name, :autofocus => true, :required => true, :input_html => {class: "form-control", :autocomplete => "off"} %>
   </div>
+
+  <div class="form-group">
+  <%= f.input :birth_date, start_year: Time.now.year - 90, end_year: Time.now.year - 8, :input_html => {class: "form-control", :autocomplete => "off"}  %>
+  </div>
   
   <div class="form-group">
    <%= f.input :adress, :autofocus => true, :required => true, :input_html => {class: "form-control"}  %>
