--- a/app/views/devise/registrations/new.en.html.erb
+++ b/app/views/devise/registrations/new.en.html.erb
@@ -1,12 +1,19 @@
-<h2>Sign up</h2>
-<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:class => 'form-vertical' }) do |f| %>
+<h2><%= t("sign_up") %></h2>
+<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {role:'form',:class => 'form-horizontal' }) do |f| %>
   <%= f.error_notification %>
   <%= display_base_errors resource %>
-  <%= f.input :login, :autofocus => true, :required => true %>
-  <%= f.input :name, :autofocus => true, :required => true %>
-  <%= f.input :email, :required => true %>
-  <%= f.input :password, :required => true %>
-  <%= f.input :password_confirmation, :required => true %>
-  <%= f.button :submit, 'Sign up', :class => 'btn-primary' %>
+  
+  
+  <%= f.input :login, :autofocus => true, :required => true, :input_html => {class: "form-control", :autocomplete => "off"} %>
+  <%= f.input :name, :autofocus => true, :required => true, :input_html => {class: "form-control", :autocomplete => "off"} %>
+  <%= f.input :last_name, :autofocus => true, :required => true, :input_html => {class: "form-control", :autocomplete => "off"} %>
+  <%= f.input :birth_date, :autofocus => true, :required => true, :input_html => {class: "form-control", :autocomplete => "off"} %>
+  <%= f.input :email, :required => true, :input_html => {class: "form-control", :autocomplete => "off"} %>
+  <%= f.input :password, :required => true, :input_html => {class: "form-control", :autocomplete => "off"} %>
+  <%= f.input :password_confirmation, :required => true, :input_html => {class: "form-control", :autocomplete => "off"} %>
+  <br/>
+  <%= f.button :submit, 'Зарегистрироваться', :class => 'btn-primary' %>
+  <br/>
+  <br/>
 <% end %>
 <%= render "devise/shared/links" %>
