--- a/app/views/devise/registrations/new.ru.html.erb
+++ b/app/views/devise/registrations/new.ru.html.erb
@@ -7,6 +7,7 @@
   <%= f.input :login, :autofocus => true, :required => true, :input_html => {class: "form-control", :autocomplete => "off"} %>
   <%= f.input :name, :autofocus => true, :required => true, :input_html => {class: "form-control", :autocomplete => "off"} %>
   <%= f.input :last_name, :autofocus => true, :required => true, :input_html => {class: "form-control", :autocomplete => "off"} %>
+  <%= f.input :birth_date, :autofocus => true, :required => true, :input_html => {class: "form-control", :autocomplete => "off"} %>
   <%= f.input :email, :required => true, :input_html => {class: "form-control", :autocomplete => "off"} %>
   <%= f.input :password, :required => true, :input_html => {class: "form-control", :autocomplete => "off"} %>
   <%= f.input :password_confirmation, :required => true, :input_html => {class: "form-control", :autocomplete => "off"} %>
