--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -34,6 +34,7 @@
             
           </ul>
           <ul class="nav navbar-nav navbar-right">
+           <%= render 'layouts/age_agreement_button' %>
             <%= render 'layouts/lang_select' %>
           </ul>
          </div>
