--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -98,7 +98,7 @@
       <% @last_photos.each do |photo|  %>
        <div class="col-sm-3">
 
-         <%= render partial: "photos/thumb", locals: { photo: photo, path: gallery_show_path(photo) } %>
+         <%= render partial: "photos/thumb", locals: { photo: photo, path: gallery_show_path(photo), user: current_user, agreed: session[:agreed] } %>
          <%= render partial: "photos/caption", locals: { photo: photo, links: [] } %>
      
        </div>
