--- a/app/views/admin/settings/_form.html.erb
+++ b/app/views/admin/settings/_form.html.erb
@@ -22,6 +22,9 @@
     <%= f.input :footer,:input_html => {class: "form-control"} %>
    </div>
                 
+    <div class="form-group">
+    <%= f.file_field :adult_image,:input_html => {class: "form-control"} %>
+    </div>
   
 
     <%= f.button :submit, value: t('save'),input_html: {class: "btn btn-default"} %>
