--- a/app/views/admin/settings/index.html.erb
+++ b/app/views/admin/settings/index.html.erb
@@ -17,6 +17,11 @@
         <td>Новость</td>
         <td><%= @admin_setting.novelty.title if @admin_setting.novelty%></td>
       </tr>
+
+       <tr>
+        <td>Картинка 18+</td>
+        <td><%= image_tag @admin_setting.adult_image_url(:small) if @admin_setting.adult_image %></td>
+      </tr>
     
   </tbody>
 </table>
