--- a/app/views/photos/_image.html.erb
+++ b/app/views/photos/_image.html.erb
@@ -1,5 +1,5 @@
 <p class="text-center">
-  <%= image_tag photo.image_url_for_others(current_user,session[:agreed], normal) %>
+  <%= image_tag photo.image_url_for_others(current_user,session[:agreed], :normal) %>
 </p>
 
 <p>
