Органы управления продублированы в самой фотографии при админском просмотре

--- a/app/views/admin/photos/show.html.erb
+++ b/app/views/admin/photos/show.html.erb
@@ -1,43 +1,14 @@
-<p>
-  <strong>Название:</strong>
-  <%= @photo.title %>
-</p>
-
-<p class="text-center">
-  
-  <%= image_tag @photo.image_url(:normal) %>
-</p>
-
-<hr/>
+<%= render partial: "photos/image", locals: { photo: @photo } %>
+<%= link_to edit_icon, edit_admin_photo_path(@photo) %>
+<%= link_to del_icon, admin_photo_path(@photo), method: :delete,remote: true, data: { confirm: 'Are you sure?' } %>
 
 
-<h4>Comments</h4>
-
-<% @photo.comments.each do |c| %>
-
-<div>
-   <%= image_tag(c.user.avatar_url(:thumb),class: "img-polaroid",style: "float: left;margin-right: 5px;") %> 
-  <div><%= c.comment %></div>
-</div>
- <%= link_to del_icon, [current_user,@photo,c], method: :delete, data: { confirm: 'Are you sure?' } if can? :destroy, c %>
-
-<div style="clear: left; height: 20px;" ></div>
-
-<% end %>
-
-<hr/>
+<%= render partial: "comment/comments_under_user", locals: {resource: @photo } %>
 
 
-<%= simple_form_for([current_user,@photo,Comment.new]) do |f| %>
-  <%= f.error_notification %>
+<%= render partial: "comment/form", locals: { user: current_user, resource: @photo} %>
 
-  <div class="form-inputs">
-    <%= f.input :comment,placeholder: 'Напиши комментарий',:input_html => {:style => "width: 500px"}  %>
-    <%= f.input :commentable, :as => :hidden, :input_html => { :value => "photo"  }  %>
-  </div>
 
- 
-    <%= f.button :submit, :class => "btn btn-default" %>
- 
-<% end %>
+
+
 
