--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   
-    <title><%= content_for?(:title) ? yield(:title) :  "Тюменский дом фотографии" %></title>
+    <title><%= title %></title>
     
     <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Photohome" %>">
     <link href='http://fonts.googleapis.com/css?family=Playfair+Display|PT+Sans+Narrow:400,700' rel='stylesheet' type='text/css'>
