--- a/app/views/admin/photos/index.html.erb
+++ b/app/views/admin/photos/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row">  
    <div class="col-lg-12">
-      <h1><%= t("last_photos") %></h1>
+      <h1><%= @title  %></h1>
     </div>
  </div>
 
