Заменил альбомы на галереи

--- a/app/views/admin/settings/index.html.erb
+++ b/app/views/admin/settings/index.html.erb
@@ -10,7 +10,7 @@
   <tbody>
     
       <tr>
-        <td>Альбом</td>
+        <td><%= t(:album) %></td>
         <td><%= @admin_setting.album.title if @admin_setting.album %></td>
       </tr>
       <tr>
