--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,7 +10,7 @@
  *
  *= require_self
  *= require_tree .
- *= require jquery.ui.all
+ *= require jquery-ui
  *= require token-input-facebook
  *= require redactor-rails
  *= require fotorama
